--- a/src/componentes/footer/Footer.css
+++ b/src/componentes/footer/Footer.css
@@ -5,11 +5,16 @@
 }
 
 .text{
-    font-size: 22px;
+    font-size: 25px;
     font-weight: bold;
     font-family: 'Preahvihear', sans-serif;
 }
-
+.text:hover{
+    cursor:default;
+}
+.text2:hover{
+    cursor:default;
+}
 .text2{
     font-size: 74.2px;
     font-weight: bold;
@@ -19,7 +24,7 @@
 .padrao{
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 24px;
     font-family: 'Barlow', sans-serif;
 }
 
