--- a/src/componentes/footer/Footer.css
+++ b/src/componentes/footer/Footer.css
@@ -16,6 +16,8 @@
     cursor:default;
 }
 .text2{
+    padding: 0px 50px;
+    
     font-size: 74.2px;
     font-weight: bold;
     font-family: 'Preahvihear', sans-serif;
