--- a/src/componentes/projeto/Projeto.css
+++ b/src/componentes/projeto/Projeto.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed:wght@300&display=swap');
 .projeto_content{
-    width: 150px;
+    width: 170px;
     height: 350px;
     padding: 50px;
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.1);
+    background-color: rgb(64, 79, 110);
     overflow: hidden;
 }
 
@@ -14,6 +16,7 @@
 
 .h1-titulo{
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 .img_projeto>.imgbar{
@@ -23,6 +26,8 @@
     justify-content:center;
 }
 
-/* .sinopse{
-    text-align: justify;
-} */
+.resumo{
+    font-family: 'Roboto Condensed', sans-serif;
+    text-align: center;
+    font-size: 17px;
+}
