--- a/src/componentes/projeto/Projeto.css
+++ b/src/componentes/projeto/Projeto.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.1);
     background-color: rgb(64, 79, 110);
     overflow: hidden;
+    border-radius: 20px;
 }
 
 .img_projeto{
@@ -22,6 +23,7 @@
 .img_projeto>.imgbar{
     min-height: 100px;
     max-height: 100px;
+    border-radius: 10px;
     display: flex;
     justify-content:center;
 }
