--- a/src/componentes/main/Main.css
+++ b/src/componentes/main/Main.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Preahvihear&display=swap');
-main{
+.main_projeto{
     background-color: #99a7c5;
     height: 78vh;
     display: grid;
